--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
     <artifactId>jeeshop</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
-    <repositories>
-        <repository>
-            <id>oschina</id>
-            <url>http://maven.oschina.net/content/groups/public</url>
-        </repository>
-    </repositories>
+    <!--<repositories>-->
+        <!--<repository>-->
+            <!--<id>oschina</id>-->
+            <!--<url>http://maven.oschina.net/content/groups/public</url>-->
+        <!--</repository>-->
+    <!--</repositories>-->
     <build>
         <plugins>
             <plugin>
@@ -85,8 +85,8 @@
         <jackson.version>1.9.13</jackson.version>
         <freemarker.version>2.3.16</freemarker.version>
         <!--<ognl.version>3.0.6</ognl.version>-->
-        <mybatis.version>3.0.6</mybatis.version>
-        <mybatis-spring.version>1.0.0-RC3</mybatis-spring.version>
+        <mybatis.version>3.2.6</mybatis.version>
+        <mybatis-spring.version>1.2.0</mybatis-spring.version>
         <spring-data-redis.version>1.4.2.RELEASE</spring-data-redis.version>
         <jedis.version>2.6.0</jedis.version>
         <mysql-jdbc.version>5.0.8</mysql-jdbc.version>
