取消oschina repository的注释

--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
     <artifactId>jeeshop</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
-    <!--<repositories>-->
-        <!--<repository>-->
-            <!--<id>oschina</id>-->
-            <!--<url>http://maven.oschina.net/content/groups/public</url>-->
-        <!--</repository>-->
-    <!--</repositories>-->
+    <repositories>
+        <repository>
+            <id>oschina</id>
+            <url>http://maven.oschina.net/content/groups/public</url>
+        </repository>
+    </repositories>
     <build>
         <plugins>
             <plugin>
