增加jdbc.url的字符编码

--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -1,6 +1,6 @@
-##jdbc配置##
+##jdbc\u914d\u7f6e##
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/jshop
+jdbc.url=jdbc:mysql://localhost:3306/jshop?characterEncoding=utf8
 jdbc.username=root
 jdbc.password=root
 jdbc.pool.minPoolSize=5
@@ -8,7 +8,7 @@ jdbc.pool.maxPoolSize=30
 jdbc.pool.initialPoolSize=5
 jdbc.pool.maxIdleTime=60
 
-##redis配置##
+##redis\u914d\u7f6e##
 redis.ip=localhost
 redis.port=6379
 redis.password=
@@ -17,7 +17,7 @@ redis.pool.maxIdle=200
 redis.pool.maxWait=1000
 redis.pool.testOnBorrow=true
 
-#文件存储使用的OSS系统(none/aliyun)
+#\u6587\u4ef6\u5b58\u50a8\u4f7f\u7528\u7684OSS\u7cfb\u7edf(none/aliyun)
 file.upload.oss=none
 file.upload.path=
 
