--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -11,7 +11,7 @@ jdbc.pool.maxIdleTime=60
 ##redis\u914d\u7f6e##
 redis.ip=localhost
 redis.port=6379
-redis.password=
+redis.password=1234
 redis.pool.maxActive=1024
 redis.pool.maxIdle=200
 redis.pool.maxWait=1000
