--- a/pom.xml
+++ b/pom.xml
@@ -9,26 +9,8 @@
         <repository>
             <id>oschina</id>
             <url>http://maven.oschina.net/content/groups/public</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
         </repository>
     </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>oschina</id>
-            <url>http://maven.oschina.net/content/groups/public</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </pluginRepository>
-    </pluginRepositories>
     <build>
         <plugins>
             <plugin>
@@ -36,6 +18,18 @@
                 <artifactId>build-helper-maven-plugin</artifactId>
                 <version>1.9.1</version>
                 <executions>
+                    <execution>
+                        <id>add-source</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>src/main/java</source>
+                            </sources>
+                        </configuration>
+                    </execution>
                     <execution>
                         <id>add-test-source</id>
                         <phase>generate-test-sources</phase>
@@ -45,19 +39,8 @@
                         <configuration>
                             <sources>
                                 <source>src/mybatis-generator/src</source>
+                                <source>src/mybatis-generator/resources</source>
                             </sources>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>add-test-resource</id>
-                        <phase>generate-test-resources</phase>
-                        <goals>
-                            <goal>add-test-resource</goal>
-                        </goals>
-                        <configuration>
-                            <resources>
-                                <resource>src/mybatis-generator/resources</resource>
-                            </resources>
                         </configuration>
                     </execution>
                 </executions>
@@ -620,19 +603,25 @@
             <artifactId>pagehelper</artifactId>
             <version>3.6.3</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>QRCode</groupId>-->
-            <!--<artifactId>QRCode</artifactId>-->
-            <!--<version>1.0</version>-->
-            <!--<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/QRCode.jar</systemPath>-->
-            <!--<scope>system</scope>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>QRCode</groupId>
+            <artifactId>QRCode</artifactId>
+            <version>1.0</version>
+            <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/QRCode.jar</systemPath>
+            <scope>system</scope>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>sinaWeibo</groupId>-->
             <!--<artifactId>sinaWeibo</artifactId>-->
             <!--<version>1.0</version>-->
             <!--<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/sinaWeibo.jar</systemPath>-->
             <!--<scope>system</scope>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.mybatis.generator</groupId>-->
+            <!--<artifactId>mybatis-generator-core</artifactId>-->
+            <!--<version>1.3.2</version>-->
+            <!--<scope>test</scope>-->
         <!--</dependency>-->
     </dependencies>
 </project>
