--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -1,8 +1,8 @@
 ##jdbc\u914d\u7f6e##
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/jshop?characterEncoding=utf8
+jdbc.url=jdbc:mysql://localhost:3306/jshop?characterEncoding=utf8&allowMultiQueries=true
 jdbc.username=root
-jdbc.password=root
+jdbc.password=123456
 jdbc.pool.minPoolSize=5
 jdbc.pool.maxPoolSize=30
 jdbc.pool.initialPoolSize=5
