1. 增加我的积分页 2. 后台管理录入bugfix (by 715699732)

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -117,8 +117,6 @@
     <!--<dispatcher>REQUEST</dispatcher>  -->
     <!--<dispatcher>FORWARD</dispatcher>-->
     <!--</filter-mapping>-->
-
-    <!--
     <error-page>
         <error-code>404</error-code>
         <location>/404.jsp</location>
@@ -126,7 +124,7 @@
     <error-page>
         <error-code>500</error-code>
         <location>/error.jsp</location>
-    </error-page>-->
+    </error-page>
 
 
     <session-config>
