--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -82,43 +82,6 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <filter>
-        <filter-name>UrlRewriteFilter</filter-name>
-        <filter-class>
-            org.tuckey.web.filters.urlrewrite.UrlRewriteFilter
-        </filter-class>
-        <init-param>
-            <param-name>logLevel</param-name>
-            <!--               <param-value>WARN</param-value> -->
-            <param-value>INFO</param-value>
-        </init-param>
-    </filter>
-
-    <filter-mapping>
-        <filter-name>UrlRewriteFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-
-    <!--<filter-mapping>-->
-    <!--<filter-name>struts2</filter-name>-->
-    <!--<url-pattern>*.action</url-pattern>-->
-    <!--</filter-mapping>-->
-    <!--<filter-mapping>-->
-    <!--<filter-name>struts2</filter-name>-->
-    <!--<url-pattern>*.jsp</url-pattern>-->
-    <!--</filter-mapping>-->
-    <!--<filter-mapping>-->
-    <!--<filter-name>struts2</filter-name>-->
-    <!--<url-pattern>/struts/*</url-pattern>-->
-    <!--</filter-mapping>-->
-    <!--<filter-mapping>-->
-    <!--<filter-name>struts2</filter-name>-->
-    <!--<url-pattern>/*</url-pattern>-->
-    <!--<dispatcher>REQUEST</dispatcher>  -->
-    <!--<dispatcher>FORWARD</dispatcher>-->
-    <!--</filter-mapping>-->
-
-    <!--
     <error-page>
         <error-code>404</error-code>
         <location>/404.jsp</location>
@@ -126,28 +89,15 @@
     <error-page>
         <error-code>500</error-code>
         <location>/error.jsp</location>
-    </error-page>-->
+    </error-page>
 
 
     <session-config>
-        <session-timeout>600</session-timeout>
+        <session-timeout>60</session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>/index.jsp</welcome-file>
-        <!-- 项目根目录下必须要有同名文件，才不报错http://www.oschina.net/question/181347_92401 -->
-        <!-- <welcome-file>/index!q.action</welcome-file> -->
+        <welcome-file>/</welcome-file>
     </welcome-file-list>
-
-    <jsp-config>
-        <taglib>
-            <taglib-uri>
-                http://jsptags.com/tags/navigation/pager
-            </taglib-uri>
-            <taglib-location>
-                /WEB-INF/jsp/pager-taglib.tld
-            </taglib-location>
-        </taglib>
-    </jsp-config>
 
     <listener>
         <listener-class>net.jeeshop.core.listener.SystemListener</listener-class>
