--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -84,11 +84,11 @@
 
     <error-page>
         <error-code>404</error-code>
-        <location>/404.jsp</location>
+        <location>/common/404.jsp</location>
     </error-page>
     <error-page>
         <error-code>500</error-code>
-        <location>/error.jsp</location>
+        <location>/common/error.jsp</location>
     </error-page>
 
 
