--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>jeeshop</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
-    <repositories>
+    <!-- <repositories>
         <repository>
             <id>oschina</id>
             <url>http://maven.oschina.net/content/groups/public</url>
@@ -28,7 +28,7 @@
                 <enabled>true</enabled>
             </snapshots>
         </pluginRepository>
-    </pluginRepositories>
+    </pluginRepositories> -->
     <build>
         <plugins>
          <plugin>
