--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -21,10 +21,8 @@ redis.pool.testOnBorrow=true
 file.upload.oss=none
 file.upload.path=
 
-client_ID=3484332778
-client_SERCRET=3618a261346e9bc110407a83987bb5cf
-redirect_URI=http://demo.jeeshop.net/user/sinawbCallbackNotifySession2.html
-baseURL=https://api.weibo.com/2/
-accessTokenURL=https://api.weibo.com/oauth2/access_token
-authorizeURL=https://api.weibo.com/oauth2/authorize
-rmURL=https://rm.api.weibo.com/2/
+paygate.fgNotifyUrl=
+paygate.bgNotifyUrl=
+alipay.partner=XXXXXXXX
+alipay.signKey=XXXXXXXXXXXXXXXXXXXXXXXXX
+alipay.requestUrl=https://mapi.alipay.com/gateway.do?_input_charset=utf-8
