--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -24,5 +24,6 @@ file.upload.path=
 paygate.fgNotifyUrl=
 paygate.bgNotifyUrl=
 alipay.partner=XXXXXXXX
+alipay.sellerEmail=****
 alipay.signKey=XXXXXXXXXXXXXXXXXXXXXXXXX
 alipay.requestUrl=https://mapi.alipay.com/gateway.do?_input_charset=utf-8
