重新定义system模块数据结构

--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -17,10 +17,17 @@ redis.pool.maxIdle=200
 redis.pool.maxWait=1000
 redis.pool.testOnBorrow=true
 
-#\u6587\u4ef6\u5b58\u50a8\u4f7f\u7528\u7684OSS\u7cfb\u7edf(none/aliyun)
+#文件存储(none/aliyun)
 file.upload.oss=none
 file.upload.path=
 
+product_image_1_w=200
+product_image_2_w=350
+##邮件通知
+from_email_account = jshop123@sina.cn
+from_email_password = jshop123456
+from_eamil_smtpServer = smtp.sina.cn
+##支付网关
 paygate.fgNotifyUrl=
 paygate.bgNotifyUrl=
 alipay.partner=XXXXXXXX
