--- a/pom.xml
+++ b/pom.xml
@@ -1,34 +1,16 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.jeeshop</groupId>
     <artifactId>jeeshop</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
-    <repositories>
-        <repository>
-            <id>oschina</id>
-            <url>http://maven.oschina.net/content/groups/public</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>oschina</id>
-            <url>http://maven.oschina.net/content/groups/public</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </pluginRepository>
-    </pluginRepositories>
+    <!--<modules>-->
+        <!--<module>jshop-goods-service</module>-->
+        <!--<module>jesshop-trade-service</module>-->
+    <!--</modules>-->
+    <packaging>pom</packaging>
+    <name>jsshop</name>
     <build>
         <plugins>
             <plugin>
@@ -86,7 +68,7 @@
 
         <aspectj.version>1.5.3</aspectj.version>
         <aopalliance.version>1.0</aopalliance.version>
-        <asm.version>3.2</asm.version>
+        <asm.version>3.3.1</asm.version>
         <cglib.version>2.2.2</cglib.version>
         <jackson.version>1.9.13</jackson.version>
         <freemarker.version>2.3.16</freemarker.version>
@@ -95,7 +77,7 @@
         <mybatis-spring.version>1.0.0-RC3</mybatis-spring.version>
         <spring-data-redis.version>1.4.2.RELEASE</spring-data-redis.version>
         <jedis.version>2.6.0</jedis.version>
-        <mysql-jdbc.version>5.0.8</mysql-jdbc.version>
+        <mysql-jdbc.version>5.1.30</mysql-jdbc.version>
         <slf4j.version>1.6.1</slf4j.version>
         <logback.version>1.1.2</logback.version>
         <json-lib.version>2.4</json-lib.version>
@@ -565,8 +547,8 @@
             <groupId>QRCode</groupId>
             <artifactId>QRCode</artifactId>
             <version>1.0</version>
-            <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/QRCode.jar</systemPath>
-            <scope>system</scope>
+            <!--<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/QRCode.jar</systemPath>-->
+            <!--<scope>system</scope>-->
         </dependency>
         <dependency>
             <groupId>org.mybatis.generator</groupId>
@@ -574,5 +556,53 @@
             <version>1.3.2</version>
             <scope>test</scope>
         </dependency>
+        <!-- 引入 dubbo-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>2.5.3</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.jboss.netty</groupId>
+                    <artifactId>netty</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.18.1-GA</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.4.6</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>jline</groupId>
+                    <artifactId>jline</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.netty</groupId>
+            <artifactId>netty</artifactId>
+            <version>3.2.9.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty</artifactId>
+            <version>3.9.2.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>com.101tec</groupId>
+            <artifactId>zkclient</artifactId>
+            <version>0.4</version>
+        </dependency>
+
     </dependencies>
 </project>
