--- a/jesshop-trade-service/src/main/resources/app.properties
+++ b/jesshop-trade-service/src/main/resources/app.properties
@@ -1,14 +1,32 @@
-dubbo.zookeeper.url=10.200.51.93:2181
+##jdbc配置##
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://123.56.21.219:3899/jeeshop
+jdbc.username=root
+jdbc.password=cbt_start007
+jdbc.pool.minPoolSize=5
+jdbc.pool.maxPoolSize=30
+jdbc.pool.initialPoolSize=5
+jdbc.pool.maxIdleTime=60
 
-jedis.maxActive=100
-jedis.maxWait=1000
-jedis.maxIdle=10
-redis.host=10.200.51.97
+##redis配置##
+redis.ip=localhost
 redis.port=6379
-redis.timeout=2000
-#redis.password=1
-redis.database=13
+redis.password=
+redis.pool.maxActive=1024
+redis.pool.maxIdle=200
+redis.pool.maxWait=1000
+redis.pool.testOnBorrow=true
 
-#elasticsearch
-elasticsearch.esNodes=10.200.19.36:9300
-elasticsearch.cluster.name=log_es
+#文件存储使用的OSS系统(none/aliyun)
+file.upload.oss=none
+file.upload.path=
+
+client_ID=3484332778
+client_SERCRET=3618a261346e9bc110407a83987bb5cf
+redirect_URI=http://demo.jeeshop.net/user/sinawbCallbackNotifySession2.html
+baseURL=https://api.weibo.com/2/
+accessTokenURL=https://api.weibo.com/oauth2/access_token
+authorizeURL=https://api.weibo.com/oauth2/authorize
+rmURL=https://rm.api.weibo.com/2/
+# dubbo注册中心
+dubbo.zookeeper.center=10.200.51.96:2181
